...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/rider_email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:autoSizeMaxTextSize="30sp"
                        android:autoSizeMinTextSize="12sp"
                        android:enabled="false"
...
                        android:layout_marginEnd="60dp"
                        android:text="Name"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/user_first_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:textColor="#000"
                        android:paddingHorizontal="15dp"
...
                        android:autoSizeMaxTextSize="30sp"/>
                        <!--android:maxLines="1"
                        android:ellipsize="end"
                        android:textSize="25sp" /> -->

                    <EditText
                        android:id="@+id/user_last_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:textColor="#000"
                        android:text="Last Name"
...
                        android:layout_marginEnd="60dp"
                        android:text="Phone"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/rider_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:textColor="#000"
                        android:paddingHorizontal="15dp"
                        android:text="Phone Number"
...
                        android:layout_weight="1"
                        android:text="Make"
                        android:textStyle="bold"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/make"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:enabled="false"
                        android:textColor="#000"
                        android:text="Make"
...
                        android:layout_weight="1"
                        android:text="Model"
                        android:textStyle="bold"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/model"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:enabled="false"
                        android:textColor="#000"
                        android:text="Model"
...
                        android:text="Plate"
                        android:textStyle="bold"

                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/plate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:enabled="false"
                        android:textColor="#000"
                        android:text="Plate"
...
                        android:layout_weight="1"
                        android:text="Seats"
                        android:textStyle="bold"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/seats"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:enabled="false"
                        android:text="Seats"
                        android:textColor="#000"
...

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
        <Button
            android:id="@+id/edit_profile_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/edit_profile"
            android:textAllCaps="false"
            android:theme="@style/ThemeOverlay.LightButton"
            android:layout_margin="15dp"/>

        <Button
            android:id="@+id/save_profile_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/save_profile"
            android:textAllCaps="false"
            android:visibility="gone"
...
